--- a/Classify/app/src/main/res/layout/fragment_login.xml
+++ b/Classify/app/src/main/res/layout/fragment_login.xml
@@ -13,8 +13,8 @@
         android:layout_width="132dp"
         android:layout_height="132dp"
         android:layout_gravity="center"
-        android:layout_marginTop="68dp"
-        app:srcCompat="@drawable/loginLogo"
+        android:layout_marginTop="40dp"
+        app:srcCompat="@drawable/logo"
         android:id="@+id/imageView" />
 
     <LinearLayout
@@ -86,6 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginTop="20dp"
+            android:background="@drawable/login_button_style"
             android:text="@string/loginBtnText"
             android:textColor="#FFFFFF"
             android:textSize="19sp"/>
