--- a/Classify/app/src/main/res/layout/fragment_login.xml
+++ b/Classify/app/src/main/res/layout/fragment_login.xml
@@ -101,8 +101,9 @@
 
     <TextView
         android:id="@+id/loginRegist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:layout_width="80dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="15dp"
         android:text="@string/regist"
